--- a/agents/templates/agents/forgot-password.html
+++ b/agents/templates/agents/forgot-password.html
@@ -99,7 +99,7 @@
               margin: 1rem 0;
               text-decoration: none;
             "
-            href="https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/agent/reset-password/[id]/[token]"
+            href="https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/agent/reset-password/{{id}}/{{token}}"
             >Reset Password</a
           >
         </div>
