SCRUM-246-update-sign-in-response-data-to-include-entity-id update: email templates

--- a/insurer/templates/invitation.html
+++ b/insurer/templates/invitation.html
@@ -432,7 +432,7 @@
 
       <div
          style="font-family:Inter, Verdana, sans-serif;font-size:14px;line-height:1;text-align:left;color:#6f767e;"
-      >Copyright &copy; [Current Year] Unyte Africa, All rights reserved.</div>
+      >Copyright &copy; {{current_year}} Unyte Africa, All rights reserved.</div>
 
                 </td>
               </tr>
