fix: forgot password url template

--- a/insurer/templates/forgot-password.html
+++ b/insurer/templates/forgot-password.html
@@ -211,7 +211,7 @@
                align="center" bgcolor="#25d366" role="presentation" style="border:none;border-radius:8px;cursor:auto;height:30px;mso-padding-alt:10px 25px;background:#25d366;" valign="middle"
             >
               <a
-                 href="https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/company/reset-password/{{id}}/{{token}}" style="display:inline-block;width:150px;background:#25d366;color:#ffffff;font-family:Inter, Verdana, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:8px;" target="_blank"
+                 href="https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/reset-password/{{id}}/{{token}}" style="display:inline-block;width:150px;background:#25d366;color:#ffffff;font-family:Inter, Verdana, sans-serif;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:8px;" target="_blank"
               >
                 Reset Password
               </a>
@@ -234,8 +234,8 @@
             following link into your web browser:
           <a
              style="display: block; margin: 8px 0;"
-            href="https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/company/reset-password/{{id}}/{{token}}"
-            >https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/company/reset-password/{{id}}/{{token}}</a></div>
+            href="https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/reset-password/{{id}}/{{token}}"
+            >https://unyte-reconciliations-frontend-dev-ynoamqpukq-uc.a.run.app/reset-password/{{id}}/{{token}}</a></div>
 
                 </td>
               </tr>
